# safesec

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
derive/: Cargo.toml
derive/src/: lib.rs
example/python/: client.py  safesec python client demo.ipynb
src/: error.rs  lib.rs  main.rs  prelude.rs
src/error/: mod.rs  network.rs
src/network/: codec.rs  mod.rs  msgpack.rs  server.rs  wipserver.rs
src/network/rpc/: message.rs  mod.rs  notify.rs  request.rs  response.rs
src/protocol/: message.rs  mod.rs
src/service/: mod.rs  rpcmessage.rs  rpcservice.rs
src/service/state/: auth.rs  boot.rs  mod.rs
src/storage/: lmdb.rs  mod.rs
src/util/: mod.rs
tests/: test_lmdb.rs  test_rpcserver.rs  test_server.rs
